# securescout-iast

./: .antigravityrules  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
e2e_test/: app.py  app_postgres.py  test_e2e.py  test_e2e_postgres.py
securescout_iast/: __init__.py  config.py  middleware.py  redact.py  reporter.py  taint.py  wsgi_middleware.py
securescout_iast/patches/: __init__.py  asyncpg_patch.py  psycopg2_patch.py  sqlite3_patch.py
securescout_iast/sinks/: xss_sink.py
tests/: test_dedup_stress.py  test_latency_sla.py  test_parameterized_taint.py  test_taint_propagation.py  test_wsgi_middleware.py  test_xss_sink.py
